testsuite/tests/letrec-disallowed/unboxed.ml.reference

# type t = { x : int64; } [@@unboxed]
# Characters 12-19:
  let rec x = {x = y} and y = 3L;;
              ^^^^^^^
Error: This kind of expression is not allowed as right-hand side of `let rec'
# 
